Fixed scroll in form when device is too small

--- a/src/sick-crud/scss/pages/_auth-pages.scss
+++ b/src/sick-crud/scss/pages/_auth-pages.scss
@@ -1,13 +1,9 @@
 .login-page, .register-page, .forgot-password-page {
 
   background: #fafafa;
-  position: absolute;
-  width: 100%;
-  height: 100%;
 
   .container {
-    position: relative;
-    height: 100%;
+    min-height: 100%;
   }
 
   .form-box {
@@ -15,7 +11,7 @@
     border-radius: 1px;
     box-shadow: 0 0 19px 0 rgba(0, 0, 0, 0.16), 0 0 19px 0 rgba(0, 0, 0, 0.16);
     margin: 0 auto;
-    max-width:100%;
+    max-width: 100%;
     min-height: 350px;
     padding: 14px 18px;
     width: 400px;
@@ -30,15 +26,17 @@
     height: 125px;
     line-height: 125px;
     margin: 18px auto;
-    max-width:100%;
+    max-width: 100%;
     text-align: center;
     width: 125px;
+
     img {
       max-width: 100%;
       max-height: 100%;
       vertical-align: baseline;
       border-radius: inherit;
     }
+
   }
 
   .form-check-label {
@@ -50,15 +48,18 @@
 @include no-flexbox() {
 
   .login-page, .register-page, .forgot-password-page {
+
     .form-box {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translateY(-50%) translateX(-50%);
     }
+
     .container {
       position: relative;
     }
+
   }
 
 }
@@ -66,12 +67,10 @@
 // Small height screen fixes
 @media screen and (max-height: 600px) {
 
-  .login-page, .register-page, .forgot-password-page {
-    height: auto;
-  }
   .container {
     padding-top: 20px;
     padding-bottom: 20px;
   }
 
 }
+
